--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,5 @@
     <string name="ok">OK</string>
     <string name="first_run_message">Welcome to the Mobile Take Home app!</string>
     <string name="user_list_home_top_bar_title">Github Users</string>
-    <string name="task_detail_title">Task Detail</string>
+    <string name="user_details_top_bar_title">User Details</string>
 </resources>
